apps/services/grill-stats/base/namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grill-monitoring
  labels:
    name: grill-monitoring
    app.kubernetes.io/name: grill-monitoring
    app.kubernetes.io/part-of: grill-stats
